# jukola-xml-model

./: .gitignore  2018-lognormal-estimates.ipynb  2019-relay-simulation.ipynb  CNAME  Jukola-terrain.numbers  LICENSE  Pipfile  README.md  clear-all-notebook-cells.sh  cluster_names.ipynb  cluster_names.py  combine-estimates-with-running-order.ipynb  count_names.py  debug-new-long-runs.ipynb  debug-single-runner.ipynb  error-analysis.ipynb  estimate_paces-ve-names.ipynb  estimate_paces.ipynb  estimate_personal_coefficients.py  fetch-preprocess-and-simulate-2021.sh  fetch_online_team_countries.py  fetch_running_order.py  fetch_team_countries.py  final_running_order.py  for_print_ju2018.tsv  full_pipeline-ve-names.ipynb  get_running_order.py  group_csv.py  group_names.py  group_teams.ipynb  hyperparameter-tuning.sh  ideal-times-exploration.ipynb  ideal_paces_cleanup.py  index.html  individual-estimates-hyperparameter-tuning.sh  individual-estimates-hyperparams.ipynb  individual-estimates.ipynb  install-deps-and-load-data.ipynb  json_reports.py  log_normal_estimate.py  (+33 more)
Jukola-terrain/: ideal-paces-ju.tsv  ideal-paces-ve.tsv  ju-ideal-times.csv  terrrain-descriptions.json  ve-ideal-times.csv  viitoitus.csv
models/: best_params_gbr_ju_fy_2017.json  best_params_gbr_ju_fy_2018.json  best_params_gbr_ju_fy_2019.json  best_params_gbr_ju_fy_2021.json  best_params_gbr_ju_fy_2022.json  best_params_gbr_ve_fy_2017.json  best_params_gbr_ve_fy_2018.json  best_params_gbr_ve_fy_2019.json  best_params_gbr_ve_fy_2021.json  best_params_known_runs_hgbr_ju_fy_2017.json  (+23 more)
(+96 files in other folders)
