[tool.poetry]
name = "jukola-xml-model"
version = "0.1.0"
description = ""
authors = ["Oskari Pirttikoski <oskari.pirttikoski@reaktor.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.0"
seaborn = "^0.12.1"
lxml = "^4.9.2"
requests = "^2.28.1"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
statsmodels = "^0.13.5"
scikit-optimize = "^0.9.0"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
